# ML-Templates

./: .gitignore  pyproject.toml  requirements.txt  run_tests.py
examples/: config_example.yaml  example_hierarchical_classifier.py  example_simple_multiclass.py  example_text_classification.py  test_nn_classifiers.py
nlp_templates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nlp_templates/base/: base_classifier.py
nlp_templates/classifiers/: __init__.py  hierarchical_multiclass_classifier.py  hierarchical_nn_classifier.py  simple_multiclass_classifier.py  text_classifier.py
nlp_templates/evaluation/: __init__.py  metrics.py  visualizations.py
nlp_templates/preprocessing/: __init__.py  config_loader.py
nlp_templates/utils/: embedding_generation.py  logging_utils.py  mlflow_manager.py
tests/: __init__.py  test_embedding_generation.py  test_hierarchical_multiclass_classifier.py  test_hierarchical_nn_classifier.py  test_logging_utils.py  test_mlflow_manager.py  test_simple_multiclass_classifier.py
